ops/kuber/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "2048-ingress"
  namespace: dev
  labels:
    app: 2048-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: alb
spec:
  ingressClassName: alb
  rules:
    - host: redis.db.hexconfig.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redis-svc
                port:
                  number: 6379
